# Flappy-Bird

./: .gitignore  CMakeLists.txt  README.md
src/: Application.cpp  Application.h  Bird.cpp  Bird.h  Button.cpp  Button.h  Component.cpp  Component.h  Container.cpp  Container.h  Entity.cpp  Entity.h  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  Pipe.cpp  Pipe.h  Random.cpp  Random.h  ResourceHolder.h  ResourceHolder.inl  ResourceIdentifiers.h  State.cpp  State.h  StateIdentifiers.h  StateStack.cpp  StateStack.h  Utility.cpp  Utility.h  World.cpp  World.h  main.cpp
